test/pending/t7629-view-bounds-removal.scala
object Test {
  def f[A <% Int](a: A) = null
  def g[C, B <: C, A <% B : Numeric](a: A) = null
}
